paper_reproduced/scripts/result-simdjson-scalability.log
🔧 Compiling simdjson...
../related_works/simdjson/quickstart-original-iterate-use-case-query.cpp: In function ‘double calcTime(std::__cxx11::string, int)’:
../related_works/simdjson/quickstart-original-iterate-use-case-query.cpp:54:5: error: ‘query_time’ was not declared in this scope
     query_time += duration_ns.count();
     ^~~~~~~~~~
../related_works/simdjson/quickstart-original-iterate-use-case-query.cpp:54:5: note: suggested alternative: ‘query_res’
     query_time += duration_ns.count();
     ^~~~~~~~~~
     query_res
🚀 Running simdjson query results:...
AVERAGE,5.83901e+07
